# gear

./: .gitmodules  CMakeLists.txt  README.md
content/shader/: cluster_aabb.comp  cluster_debug.comp  cluster_render.frag  cluster_render.vert  cluster_store.comp  clustered_forward.frag  clustered_forward.vert  clustering.comp  colorspace.glsl  common.glsl  debug_geometry.frag  default.frag  default.vert  gbuffer.frag  gbuffer.vert  imgui.frag  imgui.vert  light_inc.glsl  material.glsl  quad.vert  samplers_inc.glsl  shadow.vert  shadow_inc.glsl  uniforms.glsl  vertex_factory.glsl  vsm_blur.frag  vsm_convert.frag
src/: app.cpp  app.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  main.cpp  main_window.cpp  main_window.h  renderer.cpp  renderer.h  scene_node.cpp  scene_node.h  viewport.cpp  viewport.h  window.cpp  window.h  world.cpp  world.h
src/asset/: asset.cpp  asset.h  asset_manager.cpp  asset_manager.h  image.h  image_utilities.cpp  image_utilities.h  level.cpp  level.h  material.cpp  material.h  material_asset.cpp  material_asset.h  mesh.cpp  mesh.h  mesh_asset.cpp  mesh_asset.h  mesh_utilities.cpp  mesh_utilities.h  sdf_asset.cpp  sdf_asset.h  texture2d.cpp  texture2d.h  texture_asset.cpp  texture_asset.h
src/entity/: entity.cpp  entity.h  entity_notifications.h
src/gameplay/: camera_controller.cpp  camera_controller.h
src/importer/: gltf_importer.cpp  gltf_importer.h  sdf_generator.cpp  sdf_generator.h
src/rendering/: cluster_builder.cpp  cluster_builder.h  clustered_forward_renderer.cpp  clustered_forward_renderer.h  debug_renderer.h  (+42 more)
(+26 files in other folders)
